[package]
name = "tester"
version = "0.1.0"
authors = ["Chris Jefferson <caj21@st-andrews.ac.uk>"]

[dependencies]
lazy_static = "1.1.0"
rand = "0.5"
itertools = "0.7.8"
atomic-counter = "1.0.0"
tempfile = "3"
simple-error = { version = "0.1.12", git = "https://github.com/ChrisJefferson/simple-error" }
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
rayon = "1.0"
num-integer = "0.1"
structopt = "0.2"