[package]
name = "tester"
version = "0.1.0"
authors = ["Chris Jefferson <caj21@st-andrews.ac.uk>"]
edition = "2018"

[dependencies]
lazy_static = "1.1.0"
rand = "0.6"
itertools = "0.8"
atomic-counter = "1.0.0"
tempfile = "3"
simple-error = "=0.1.12"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
rayon = "1.0"
num-integer = "0.1"
structopt = "0.2"

