[package]
name = "tester"
version = "0.1.0"
authors = ["Chris Jefferson <caj21@st-andrews.ac.uk>"]
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
itertools = "0.12"
atomic-counter = "1.0.1"
serde = "1.0.197"
serde_json = "1.0.107"
serde_derive = "1.0.188"
rayon = "1.8.0"
num-integer = "0.1.45"
anyhow = "1.0.75"
arrayvec = "0.7.4"
clap = { version = "4", features = ["derive"] }
